added new monitor

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -16,7 +16,7 @@ workspace=DP-7,1
 ## Start default apps
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-#exec-once = swayidle timeout 600 'hyprctl dispatch dpms off && swaylock' resume 'hyprctl dispatch dpms on'
+exec-once = swayidle timeout 600 '$HOME/.local/bin/monitor.sh -lock' resume '$HOME/.local/bin/monitor.sh -lock'
 exec-once = hyprpaper &
 exec-once = waybar
 exec-once = dunst
