--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -6,7 +6,7 @@
     "passthrough": false,
     "gtk-layer-shell": true,
     "height": 18,
-    "output": [ "eDP-1", "DP-7"],
+    "output": [ "eDP-1", "DP-7", "DP-9"],
     "modules-left": [
         "hyprland/workspaces"
     ],
