update monitor script

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -7,21 +7,22 @@
 #monitor=eDP-1,disable
 #monitor=HDMI-A-1,1920x1080,-1080x0,1,transform,1
 monitor=eDP-1,1920x1200,1920x0,1
-monitor=DP-7,1920x1200,0x0,1
-monitor=DP-8,1920x1200,-1080x-540,1,transform,1
-monitor=HDMI-A-1,1024x768,auto,1,mirror,eDP-1
+#monitor=DP-7,1920x1200,0x0,1
+#monitor=DP-8,1920x1200,-1080x-540,1,transform,1
+#monitor=HDMI-A-1,1024x768,auto,1,mirror,eDP-1
 workspace=DP-7,1
 
 
 ## Start default apps
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = swayidle timeout 600 '$HOME/.local/bin/monitor.sh -lock' resume '$HOME/.local/bin/monitor.sh -lock'
+#exec-once = swayidle timeout 600 '$HOME/.local/bin/monitor.sh -lock' resume '$HOME/.local/bin/monitor.sh -lock'
 exec-once = hyprpaper &
 exec-once = waybar
 exec-once = dunst
 exec-once = upwork-dbus &
 exec-once = udiskie -t &
+exec-once = $HOME/.local/bin/monitor.sh -r
 
 
 general {
@@ -91,6 +92,7 @@ bindl=,XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
 bindl=,XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
 bindl=,XF86MonBrightnessUp, exec, $HOME/.local/bin/monitor.sh -B
 bindl=,XF86MonBrightnessDown, exec, $HOME/.local/bin/monitor.sh -b
+#bindl=,XF86SplitScreen, exec, $HOME/.local/bin/monitor.sh -m
 
 ### Window Toggele 
 bind = SUPER, F, fullscreen,
@@ -146,10 +148,11 @@ bind = SUPER_SHIFT, 0, movetoworkspace, special
 #bind = SUPER, s, movecurrentworkspacetomonitor, HDMI-A-1
 bind = SUPER, n, swapnext,
 
-#bind = SUPER, z, swapactiveworkspaces, DP-7 DP-8
-bind = SUPER_CTRL, 1, movecurrentworkspacetomonitor, DP-8
-bind = SUPER_CTRL, 2, movecurrentworkspacetomonitor, DP-7
-bind = SUPER_CTRL, 3, movecurrentworkspacetomonitor, eDP-1
+bind = SUPER, z, exec, $HOME/.local/bin/monitor.sh -r
+bind = SUPER_SHIFT, m, exec, $HOME/.local/bin/monitor.sh -m
+bind = SUPER_CTRL, 1, exec, $HOME/.local/bin/monitor.sh -s 1
+bind = SUPER_CTRL, 2, exec,  $HOME/.local/bin/monitor.sh -s 2
+bind = SUPER_CTRL, 3, exec, $HOME/.local/bin/monitor.sh -s 3
 
 ### Notification 
 bind = SUPER_SHIFT, c, exec, dunstctl close-all
