GitButler Integration Commit
This is an integration commit for the virtual branches that GitButler is tracking.

Due to GitButler managing multiple virtual branches, you cannot switch back and
forth between git branches and virtual branches easily. 

If you switch to another branch, GitButler will need to be reinitialized.
If you commit on this branch, GitButler will throw it away.

Here are the branches that are currently applied:
 - master (refs/gitbutler/master)
   branch head: 2de750408902fc968a7b200455559710f4969538
   - nixos/.nixos/ops.nix
   - waybar/.config/waybar/config
   - eww/.config/eww/eww.yuck
   - eww/.config/eww/common.yuck
   - nvim/.config/nvim/after/plugin/lsp.lua
   - scripts/.local/bin/dnstest.sh
   - scripts/.local/bin/monitor.sh
   - scripts/functions.sh
   - hypr/.config/hypr/hyprland.conf
   - eww/.config/eww/scripts/javadate.sh
   - eww/.config/eww/scripts/workspaces.sh
   - eww/.config/eww/eww.scss
   - install.sh

Your previous branch was: refs/heads/master

The sha for that commit was: 5882edc6b045530b6f062e52548b5341a928b2e7

For more information about what we're doing here, check out our docs:
https://docs.gitbutler.com/features/virtual-branches/integration-branch

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -22,6 +22,7 @@ exec-once = waybar
 exec-once = dunst
 exec-once = upwork-dbus &
 exec-once = udiskie -t &
+exec-once = eww daemon &
 exec-once = $HOME/.local/bin/monitor.sh -r
 
 
@@ -71,8 +72,8 @@ windowrulev2 = float,class:^(nemo),title:(Properties)
 #### Upwork 
 #windowrulev2 = nofullscreenrequest, class:^(Upwork)
 #windowrulev2 = size 70% 60%:title:^(Upwork)
-windowrulev2 = float,class:^(Upwork)
-windowrulev2 = center,class:^(Upwork)
+#windowrulev2 = float,class:^(Upwork)
+#windowrulev2 = center,class:^(Upwork)
 
 ## KEY BINDING 
 
@@ -148,11 +149,13 @@ bind = SUPER_SHIFT, 0, movetoworkspace, special
 #bind = SUPER, s, movecurrentworkspacetomonitor, HDMI-A-1
 bind = SUPER, n, swapnext,
 
-bind = SUPER, z, exec, $HOME/.local/bin/monitor.sh -r
-bind = SUPER_SHIFT, m, exec, $HOME/.local/bin/monitor.sh -m
+#bind = SUPER, z, exec, $HOME/.local/bin/monitor.sh -r
 bind = SUPER_CTRL, 1, exec, $HOME/.local/bin/monitor.sh -s 1
 bind = SUPER_CTRL, 2, exec,  $HOME/.local/bin/monitor.sh -s 2
 bind = SUPER_CTRL, 3, exec, $HOME/.local/bin/monitor.sh -s 3
+bind = SUPER_ALT,m , exec, $HOME/.local/bin/monitor.sh -w
+bind = SUPER_SHIFT, m, exec, $HOME/.local/bin/monitor.sh -r
+bind = SUPER_CTRL, m, exec, $HOME/.local/bin/monitor.sh -m
 
 ### Notification 
 bind = SUPER_SHIFT, c, exec, dunstctl close-all
@@ -164,4 +167,3 @@ bind = SUPER_SHIFT, m, exec, grim -o $(hyprctl monitors | grep -B 10 'focused: y
 bind = SUPER, p, exec, grim -g "$(slurp;)" - | wl-copy && notify-send "print screen" "Print screen area saved to clipboard." 
 bind = SUPER_ALT, p, exec, grim -g "$(slurp; sleep 3)" - | wl-copy && notify-send "print screen" "Print screen area saved to clipboard." 
 bind = SUPER_SHIFT, p, exec, grim -g "$(slurp)" ~/Pictures/Screenshot/$(date +%Y-%m-%d_%H-%m-%s).jpg && notify-send "print screen" "Print screen area saved to Pictures folder."
-bind = SUPER_ALT,m , exec, $HOME/.local/bin/monitor.sh -w
