--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -100,7 +100,8 @@
     "temperature": {
         "format": "  {temperatureC}°C",
         "critical-threshold": 60,
-        "hwmon-path": "/sys/class/hwmon/hwmon4/temp1_input"
+        "hwmon-path": "/sys/class/hwmon/hwmon4/temp1_input",
+        "on-click": "kitty --title btop sh -c 'btop'"
 
     },
 
