--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,8 +1,3 @@
-##########################
-# Hyprland config 
-#
-# Updated: 22 May 2023
-##########################
 
 #monitor=eDP-1,disable
 #monitor=HDMI-A-1,1920x1080,-1080x0,1,transform,1
@@ -13,12 +8,13 @@ monitor=eDP-1,1920x1200,1920x0,1
 workspace=DP-7,1
 
 
-## Start default apps
+# Start default apps
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = $HOME/.config/hypr/xdg-portal.sh
 #exec-once = swayidle timeout 600 '$HOME/.local/bin/monitor.sh -lock' resume '$HOME/.local/bin/monitor.sh -lock'
 exec-once = hyprpaper &
-exec-once = waybar
+#exec-once = waybar
 exec-once = dunst
 exec-once = upwork-dbus &
 exec-once = udiskie -t &
@@ -46,6 +42,7 @@ master {
 
 input {
     kb_layout = us
+    left_handed = true
 }
 
 misc {
@@ -54,28 +51,32 @@ misc {
 }
 
 
-## Window Rules 
+# Window Rules 
 windowrulev2 = center, class:^(fuzzell)$
-#### Pavucontrol
+# Pavucontrol
 windowrulev2 = float,class:^(pavucontrol)$
 windowrulev2 = size 50% 60%,class:^(pavucontrol)$
 windowrulev2 = center,class:^(pavucontrol)$
-#### BTOP
+# BTOP
 windowrulev2 = size 60% 70%:title:^(btop)$
 windowrulev2 = float,title:^(btop)$
 windowrulev2 = center,title:^(btop)$
-#### Chrome Task manager
+# Chrome Task manager
 windowrulev2 = float,title:^(Task Manager - Google Chrome)$
 windowrulev2 = center,title:^(Task Manager - Google Chrome)$
-#### Nemo 
+# Nemo 
 windowrulev2 = float,class:^(nemo),title:(Properties)
-#### Upwork 
+# Upwork 
 #windowrulev2 = nofullscreenrequest, class:^(Upwork)
 #windowrulev2 = size 70% 60%:title:^(Upwork)
 #windowrulev2 = float,class:^(Upwork)
 #windowrulev2 = center,class:^(Upwork)
 
-## KEY BINDING 
+# Upload
+windowrulev2 = size 50% 50%, title:^(Open File)$
+windowrulev2 = center, title:^(Open File)$
+
+# KEY BINDING 
 
 bind = SUPER, RETURN, exec, kitty
 bind = SUPER, w, killactive,
@@ -83,7 +84,7 @@ bind = SUPER, space, exec, fuzzel
 bind = CTRL+ALT, l , exec, swaylock & disown
 
 
-### Hardware 
+# Hardware 
 #bindl=,switch:off:Lid Switch,exec,hyprctl keyword monitor "eDP-1, 1920x1200, 0x0, 1"
 #bindl=,switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-1, disabled"
 bindl=,switch:off:Lid Switch,exec, monitor.sh -l on
@@ -95,25 +96,25 @@ bindl=,XF86MonBrightnessUp, exec, $HOME/.local/bin/monitor.sh -B
 bindl=,XF86MonBrightnessDown, exec, $HOME/.local/bin/monitor.sh -b
 #bindl=,XF86SplitScreen, exec, $HOME/.local/bin/monitor.sh -m
 
-### Window Toggele 
+# Window Toggele 
 bind = SUPER, F, fullscreen,
 bind = SUPER, t, togglefloating
 bind = SUPER, t, centerwindow
 
 
-### Window Move SUPER + [j,k,h,l]
+# Window Move SUPER + [j,k,h,l]
 bind = SUPER, j, movefocus, u 
 bind = SUPER, k, movefocus, d
 bind = SUPER, h, movefocus, l 
 bind = SUPER, l, movefocus, r
 
-### Window move SUPER + SHIFT + [j,k,h,l]
+# Window move SUPER + SHIFT + [j,k,h,l]
 bind = SUPER_SHIFT, j, movewindow, u
 bind = SUPER_SHIFT, k, movewindow, d
 bind = SUPER_SHIFT, h, movewindow, l
 bind = SUPER_SHIFT, l, movewindow, r
 
-### Window Resize 
+# Window Resize 
 bind = SUPER_ALT, l, resizeactive, 30 0
 bind = SUPER_ALT, h, resizeactive, -30 0
 bind = SUPER_ALT, j, resizeactive, 0 30
@@ -121,7 +122,7 @@ bind = SUPER_ALT, k, resizeactive, 0 -30
 bind = SUPER_ALT, c, centerwindow
 
 
-### Workspace SUPER + [1,9]
+# Workspace SUPER + [1,9]
 bind = SUPER, 1, workspace, 1 
 bind = SUPER, 2, workspace, 2 
 bind = SUPER, 3, workspace, 3 
@@ -133,7 +134,7 @@ bind = SUPER, 8, workspace, 8
 bind = SUPER, 9, workspace, 9
 bind = SUPER, 0, togglespecialworkspace 
 
-### Workspace Move 
+# Workspace Move 
 bind = SUPER_SHIFT, 1, movetoworkspace, 1
 bind = SUPER_SHIFT, 2, movetoworkspace, 2
 bind = SUPER_SHIFT, 3, movetoworkspace, 3
@@ -157,11 +158,11 @@ bind = SUPER_ALT,m , exec, $HOME/.local/bin/monitor.sh -w
 bind = SUPER_SHIFT, m, exec, $HOME/.local/bin/monitor.sh -r
 bind = SUPER_CTRL, m, exec, $HOME/.local/bin/monitor.sh -m
 
-### Notification 
+# Notification 
 bind = SUPER_SHIFT, c, exec, dunstctl close-all
 
 
-### APP 
+# APP 
 bind = SUPER, m, exec, grim -o $(hyprctl monitors | grep -B 10 'focused: yes' | grep 'Monitor' | awk '{ print $2 }') - | wl-copy && notify-send "print screen" "Print screen active monitor saved to cliboard."
 bind = SUPER_SHIFT, m, exec, grim -o $(hyprctl monitors | grep -B 10 'focused: yes' | grep 'Monitor' | awk '{ print $2 }') ~/Pictures/Screenshot/$(date +%Y-%m-%d_%H-%m-%s).png && notify-send "print screen" "Print screen active monitor saved to Pitures folder."
 bind = SUPER, p, exec, grim -g "$(slurp;)" - | wl-copy && notify-send "print screen" "Print screen area saved to clipboard." 
