--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -12,9 +12,10 @@ workspace=DP-7,1
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = $HOME/.config/hypr/xdg-portal.sh
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
 #exec-once = swayidle timeout 600 '$HOME/.local/bin/monitor.sh -lock' resume '$HOME/.local/bin/monitor.sh -lock'
 exec-once = hyprpaper &
-#exec-once = waybar
+exec-once = hypridle &
 exec-once = dunst
 exec-once = upwork-dbus &
 exec-once = udiskie -t &
@@ -81,7 +82,7 @@ windowrulev2 = center, title:^(Open File)$
 bind = SUPER, RETURN, exec, kitty
 bind = SUPER, w, killactive,
 bind = SUPER, space, exec, fuzzel
-bind = CTRL+ALT, l , exec, swaylock & disown
+bind = CTRL+ALT, l , exec, hyprlock & disown
 
 
 # Hardware 
