--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,8 +12,8 @@ bind-key -r c new-window -c '#{pane_current_path}'
 bind-key -r n next-window
 bind-key -r b previous-window
 
-bind-key j choose-tree -swZ
-bind -n C-j display-popup -E "\
+bind-key p choose-tree -swZ
+bind -n C-p display-popup -E "\
     tmux list-sessions -F '#{?session_attached,,#{session_name}}' |\
     sed '/^$/d' |\
     fzf --reverse --header jump-to-session --preview 'tmux capture-pane -pt {}'  |\
