change to myposh

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -37,13 +37,13 @@ decoration {
 }
 
 master {
-    new_is_master = true 
+#    new_is_master = true 
 }
 
 
 input {
     kb_layout = us
-    left_handed = true
+    left_handed = true`
 }
 
 misc {
@@ -166,6 +166,6 @@ bind = SUPER_SHIFT, c, exec, dunstctl close-all
 # APP 
 bind = SUPER, m, exec, grim -o $(hyprctl monitors | grep -B 10 'focused: yes' | grep 'Monitor' | awk '{ print $2 }') - | wl-copy && notify-send "print screen" "Print screen active monitor saved to cliboard."
 bind = SUPER_SHIFT, m, exec, grim -o $(hyprctl monitors | grep -B 10 'focused: yes' | grep 'Monitor' | awk '{ print $2 }') ~/Pictures/Screenshot/$(date +%Y-%m-%d_%H-%m-%s).png && notify-send "print screen" "Print screen active monitor saved to Pitures folder."
-bind = SUPER, p, exec, grim -g "$(slurp;)" - | wl-copy && notify-send "print screen" "Print screen area saved to clipboard." 
-bind = SUPER_ALT, p, exec, grim -g "$(slurp; sleep 3)" - | wl-copy && notify-send "print screen" "Print screen area saved to clipboard." 
-bind = SUPER_SHIFT, p, exec, grim -g "$(slurp)" ~/Pictures/Screenshot/$(date +%Y-%m-%d_%H-%m-%s).jpg && notify-send "print screen" "Print screen area saved to Pictures folder."
+bind = SUPER, p, exec, grim -g "$(slurp;)" - | satty --filename - --early-exit --copy-command wl-copy
+bind = SUPER_ALT, p, exec, grim -g "$(slurp; sleep 3)" - | satty --filename - --early-exit --copy-command wl-copy
+bind = SUPER_SHIFT, p, exec, grim -g "$(slurp)" - | satty --filename - --early-exit --output-filename ~/Pictures/Screenshot/$(date +%Y-%m-%d_%H-%m-%s).png && notify-send "print screen" "Print screen area saved to Pictures folder."
