--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,7 +3,7 @@ set -g default-terminal "screen-256color"
 set-option -sa terminal-overrides ",xterm*:RGB"
 set-option -sg escape-time 10
 set-option -g focus-events on 
-set-option -g prefix C-a
+set-option -g prefix C-s
 set-option -g remain-on-exit off
 
 #Binding Key
@@ -30,29 +30,43 @@ set-window-option -g mode-keys vi
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
+bind C-Y set-window-option synchronize-panes
+
 # Open Notes
 bind-key -r N neww -da -n "Notes" -c "~/Documents/notes" "nvim personal.md"\; selectw -t "Notes"
 bind-key -r D neww -da -n "Dotfiles" -c "~/.dotfiles" "nvim"\; selectw -t "Dotfiles"
 
 # Tmux Plugins
-#set -g @plugin 'tmux-plugins/tpm'
-#set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'catppuccin/tmux'
 
-#set -g @plugin 'tmux-plugins/tmux-net-speed'
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
 
-# Tmux Plugins Config
-#set -g @net_speed_interfaces "enp3s0"
-#set -g @net_speed_format "D:%10s U:%10s"
-#set -g status-right "#{net_speed}"
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
 
-#run '~/.tmux/plugins/tpm/tpm'
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W"
+
+set -g @catppuccin_status_modules_right "directory user host session"
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+
+set -g @catppuccin_flavour 'mocha' # latte,frappe, macchiato or mocha
+
+set -g @plugin 'tmux-plugins/tpm'
+run '~/.tmux/plugins/tpm/tpm'
 
 # Styles and Status Bar
-set -g status-style 'bg=#002b36 fg=#fdf6e3'
+#set -g status-style 'bg=002b36 fg=#fdf6e3'
+#
+#set -g status-left " S "
+#set -g window-status-format " I:#W "
+#set -g window-status-current-format " I:#W "
+#set -g window-status-current-style 'bg=268bd2 fg=#eee8d5'
 
-set -g status-left " #S "
-set -g window-status-format " #I:#W "
-set -g window-status-current-format " #I:#W "
-set -g window-status-current-style 'bg=#268bd2 fg=#eee8d5'
-
-set -g status-right " nurohman.com"
+#set -g status-right " nurohman.com"
