--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -10,7 +10,7 @@ workspace=DP-7,1
 
 # Start default apps
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+#exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = $HOME/.config/hypr/xdg-portal.sh
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 #exec-once = swayidle timeout 600 '$HOME/.local/bin/monitor.sh -lock' resume '$HOME/.local/bin/monitor.sh -lock'
@@ -68,14 +68,28 @@ windowrulev2 = center,title:^(Task Manager - Google Chrome)$
 # Nemo 
 windowrulev2 = float,class:^(nemo),title:(Properties)
 # Upwork 
-#windowrulev2 = nofullscreenrequest, class:^(Upwork)
-#windowrulev2 = size 70% 60%:title:^(Upwork)
-#windowrulev2 = float,class:^(Upwork)
-#windowrulev2 = center,class:^(Upwork)
+windowrulev2 = move 0 0,class:^(Upwork)
+windowrulev2 = center center,class:^(Upwork)
+#windowrulev2 = center center,title:(Time Tracker)
+
+# Global Protect
+windowrulev2 = center,class:(gpclient)
 
 # Upload
 windowrulev2 = size 50% 50%, title:^(Open File)$
 windowrulev2 = center, title:^(Open File)$
+
+# MPV
+windowrulev2 = fullscreen,class:^(mpv)
+windowrulev2 = workspace 4,class:^(mpv)
+windowrulev2 = noinitialfocus,class:^(mpv)
+
+# Spice 
+windowrulev2 = fullscreen,class:^(spicy)
+windowrulev2 = workspace 7,class:^(spicy)
+# Mozilla
+windowrulev2 = float, class:(firefox),title:(Page Info)$
+#windowrulev2 = float, title:(.*)(Bitwarden)*
 
 # KEY BINDING 
 
