--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -33,7 +33,7 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection c
 bind C-Y set-window-option synchronize-panes
 
 # Open Notes
-bind-key -r N neww -da -n "Notes" -c "~/Documents/notes" "nvim personal.md"\; selectw -t "Notes"
+bind-key -r N neww -da -n "Notes" -c "~/Documents/personal/notes/Notes" "nvim"\; selectw -t "Notes"
 bind-key -r D neww -da -n "Dotfiles" -c "~/.dotfiles" "nvim"\; selectw -t "Dotfiles"
 
 # Tmux Plugins
