update nvim plugin obsidian

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -73,11 +73,11 @@ windowrulev2 = center center,class:^(Upwork)
 #windowrulev2 = center center,title:(Time Tracker)
 
 # Global Protect
-windowrulev2 = center,class:(gpclient)
+#windowrulev2 = center,class:(gpclient)
 
 # Upload
-windowrulev2 = size 50% 50%, title:^(Open File)$
-windowrulev2 = center, title:^(Open File)$
+#windowrulev2 = center, class:^(firefox), title:^(File Upload)$
+#windowrulev2 = size 90% 50%, class:^(firefox), title:^(File Upload)$
 
 # MPV
 windowrulev2 = fullscreen,class:^(mpv)
@@ -88,9 +88,12 @@ windowrulev2 = noinitialfocus,class:^(mpv)
 windowrulev2 = fullscreen,class:^(spicy)
 windowrulev2 = workspace 7,class:^(spicy)
 # Mozilla
-windowrulev2 = float, class:(firefox),title:(Page Info)$
-#windowrulev2 = float, title:(.*)(Bitwarden)*
+#windowrulev2 = float, class:(firefox),title:^(Page)(.*)$
+#windowrulev2 = float, class:(Firefox),title:(.*)(Bitwarden)*
 
+
+# Workspace 
+workspace = 4, monitor:model:22B3HM
 # KEY BINDING 
 
 bind = SUPER, RETURN, exec, kitty
