--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -91,6 +91,8 @@ windowrulev2 = workspace 7,class:^(spicy)
 #windowrulev2 = float, class:(firefox),title:^(Page)(.*)$
 #windowrulev2 = float, class:(Firefox),title:(.*)(Bitwarden)*
 
+# Thunderbird
+windowrulev2 = size 60% 60%, title:^(Save Attachment)
 
 # Workspace 
 workspace = 4, monitor:model:22B3HM
@@ -98,7 +100,7 @@ workspace = 4, monitor:model:22B3HM
 
 bind = SUPER, RETURN, exec, kitty
 bind = SUPER, w, killactive,
-bind = SUPER, space, exec, fuzzel
+bind = SUPER, space, exec, rofi -show drun -theme ~/.config/rofi/app.rasi 
 bind = CTRL+ALT, l , exec, hyprlock & disown
 
 
