--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,7 +19,8 @@ bind -n C-p display-popup -E "\
     fzf --reverse --header jump-to-session --preview 'tmux capture-pane -pt {}'  |\
     xargs tmux switch-client -t"
 
-bind-key -r T display-popup -E "htop"
+bind-key -r N display-popup -E "note.sh open"
+bind-key -r T display-popup -E "note.sh openTodo"
 bind-key -r | splitw -hc '#{pane_current_path}'
 bind-key -r _ splitw -vc '#{pane_current_path}'
 
@@ -33,7 +34,6 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection c
 bind C-Y set-window-option synchronize-panes
 
 # Open Notes
-bind-key -r N neww -da -n "Notes" -c "~/" "obt"\; selectw -t "Notes"
 bind-key -r D neww -da -n "Dotfiles" -c "~/.dotfiles" "nvim"\; selectw -t "Dotfiles"
 
 # Tmux Plugins
