--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -40,8 +40,8 @@ input-field {
 
 label {
     monitor =
-#    text = cmd[update:1000] echo "$(date +"%-H:%M%p")"
-    text = $TIME
+    text = cmd[update:1000] echo "$(date +"%-I:%M%p")"
+#    text = $TIME
     color = $foreground
     #color = rgba(255, 255, 255, 0.6)
     font_size = 120
