--- a/oh-my-posh/.config/oh-my-posh/theme.yaml
+++ b/oh-my-posh/.config/oh-my-posh/theme.yaml
@@ -1,6 +1,5 @@
-$schema: https://raw.githubusercontent.com/JanDeDobbeleer/oh-my-posh/main/themes/schema.json
-version: 2
-final_space: true
+# yaml-language-server: $schema=https://raw.githubusercontent.com/JanDeDobbeleer/oh-my-posh/main/themes/schema.json
+
 palette:
   blue-bell: "#9aa5ce"
   blue-black: "#565f89"
@@ -9,7 +8,7 @@ palette:
   main-bg: "#24283b"
   pastal-grey: "#cfc9c2"
   pistachio-green: "#9ece6a"
-  t-background: "p:main-bg"
+  t-background: p:main-bg
   terminal-black: "#414868"
   terminal-blue: "#7aa2f7"
   terminal-green: "#73daca"
@@ -18,75 +17,79 @@ palette:
   terminal-white: "#c0caf5"
   terminal-yellow: "#e0af68"
   white-blue: "#a9b1d6"
-
-blocks:
-  - alignment: left
-    segments: 
-      - type: python
-        style: plain
-        template: "<#7dcfff,> 󰌠 {{ .Venv }}</> "
-      - type: command
-        foreground: "p:terminal-yellow"
-        style: plain
-        template: "  {{ .Output }} "
-        properties:
-          shell: bash
-          command: echo $nixlang
-      - type: path
-        style: plain
-        foreground: "p:terminal-magenta"
-        properties:
-          style: folder
-          mapped_locations:
-            "~": " 󰠦 "
-        template: "  {{ .Path }}"
-      - type: git
-        style: plain
-        foreground: "p:light-sky-blue"
-        foreground_templates:
-          - "{{ if or (.Working.Changed) (.Staging.Changed) }}p:terminal-red{{ end }}"
-          - "{{ if and (gt .Ahead 0) (gt .Behind 0)}}p:light-sky-blue {{ end }}"
-          - "{{ if gt .Ahead 0 }}p:terminal-blue{{ end }}"
-          - "{{ if gt .Behind 0 }}p:celeste-blue{{ end }}"
-        template: " ({{ .HEAD }})"
-        properties:
-          fetch_status: true
-
-
-    type: prompt
-
-  - alignment: right
-    type: prompt
-    segments:
-      - type: executiontime
-        style: plain
-        foreground: "p:terminal-red"
-        properties:
-          threshold: 500
-          style: austin
-      - type: helm
-        style: plain
-        properties:
-          display_mode: "files"
-
-
-  - alignment: left
-    newline: true
-    type: prompt
-    segments:
-      - foreground_templates: 
-          - "{{ if eq .Code 0 }}p:pistachio-green{{ else }}p:terminal-red{{ end }}"
-        style: plain
-        template: " > "
-        type: text
-
-secondary_prompt: 
-  background: transparent
-  foreground: "p:terminal-blue"
+secondary_prompt:
   template: " >> "
-
+  foreground: p:terminal-blue
+  background: transparent
 transient_prompt:
-  background: "p:t-backgound"
-  foreground: "p:terminal-blue"
-  template: " 󰞷 "
-
+  template: " \U000f07b7 "
+  foreground: p:terminal-blue
+  background: p:t-backgound
+blocks:
+- type: prompt
+  alignment: left
+  segments:
+  - style: plain
+    template: "<#7dcfff,> \U000f0320 {{ .Venv }}</> "
+    foreground: ""
+    background: ""
+    type: python
+  - properties:
+      command: echo $nixlang
+      shell: bash
+    style: plain
+    template: " \uf313 {{ .Output }} "
+    foreground: p:terminal-yellow
+    background: ""
+    type: command
+  - properties:
+      mapped_locations:
+        "~": " \U000f0826 "
+      style: folder
+    style: plain
+    template: " \uf4d4 {{ .Path }}"
+    foreground: p:terminal-magenta
+    background: ""
+    type: path
+  - properties:
+      fetch_status: true
+    style: plain
+    template: " ({{ .HEAD }})"
+    foreground: p:light-sky-blue
+    background: ""
+    type: git
+    foreground_templates:
+    - "{{ if or (.Working.Changed) (.Staging.Changed) }}p:terminal-red{{ end }}"
+    - "{{ if and (gt .Ahead 0) (gt .Behind 0)}}p:light-sky-blue {{ end }}"
+    - "{{ if gt .Ahead 0 }}p:terminal-blue{{ end }}"
+    - "{{ if gt .Behind 0 }}p:celeste-blue{{ end }}"
+- type: prompt
+  alignment: right
+  segments:
+  - properties:
+      style: austin
+      threshold: 500
+    style: plain
+    foreground: p:terminal-red
+    background: ""
+    type: executiontime
+  - properties:
+      display_mode: files
+    style: plain
+    foreground: ""
+    background: ""
+    type: helm
+- type: prompt
+  alignment: left
+  segments:
+  - style: plain
+    template: " > "
+    foreground: ""
+    background: ""
+    type: text
+    foreground_templates:
+    - "{{ if eq .Code 0 }}p:pistachio-green{{ else }}p:terminal-red{{ end }}"
+  newline: true
+version: 3
+auto_upgrade: true
+final_space: true
