--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -37,36 +37,30 @@ bind C-Y set-window-option synchronize-panes
 bind-key -r D neww -da -n "Dotfiles" -c "~/.dotfiles" "nvim"\; selectw -t "Dotfiles"
 
 # Tmux Plugins
-set -g @plugin 'catppuccin/tmux'
 
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
+set -g @plugin 'catppuccin/tmux#v2.1.2'
 
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
+set -ogq @catppuccin_pane_status_enabled "no" # set to "yes" to enable
+set -ogq @catppuccin_pane_border_status "off" # set to "yes" to enable
 
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W"
+# Window
+set -ogq @catppuccin_window_status_style "rounded" # basic, rounded, slanted, custom, or none
+set -ogq @catppuccin_window_text " #W"
+set -ogq @catppuccin_window_number "#I"
+set -ogq @catppuccin_window_current_text " #W"
+set -ogq @catppuccin_window_current_number "#I"
 
-set -g @catppuccin_status_modules_right "directory user host session"
-set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator ""
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-
-set -g @catppuccin_flavour 'mocha' # latte,frappe, macchiato or mocha
+set -g status-left " "
+set -g status-right "#{E:@catppuccin_status_directory} #{E:@catppuccin_status_application}"
 
 set -g @plugin 'tmux-plugins/tpm'
 run '~/.tmux/plugins/tpm/tpm'
+run '~/.tmux/plugins/tmux/catppuccin.tmux'
 
 # Styles and Status Bar
 #set -g status-style 'bg=002b36 fg=#fdf6e3'
 #
 #set -g status-left " S "
-#set -g window-status-format " I:#W "
-#set -g window-status-current-format " I:#W "
 #set -g window-status-current-style 'bg=268bd2 fg=#eee8d5'
 
 #set -g status-right " nurohman.com"
